공백 문자열에 대한 처리 완료. 프로그램 목록에서는 적용되지만, 다른 곳에서는 헤더의 js가 일부 반영이 안 됨.

--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -74,7 +74,7 @@
             <div class="searchbox-top">
                 <div class="searchbox-inner">
                     <div class="search-box">
-                        <form action="/program/list" method="get">
+                        <form action="/program/list" id="search-form" method="get">
                             <input autocomplete="off" maxlength="50" placeholder="검색어를 입력해주세요" name="keyword" type="text" value="">
                             <button aria-label="검색" class="search-button" type="submit">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" aria-hidden="true">
@@ -136,4 +136,7 @@
 </body>
 
 <script src="/js/member/mypage-all.js"></script>
+<script>
+
+</script>
 </html>
