--- a/src/main/resources/templates/main/program-list.html
+++ b/src/main/resources/templates/main/program-list.html
@@ -273,14 +273,14 @@
 <script src="/js/main/program_list_service.js"></script>
 <script src="/js/main/program_list_event.js"></script>
 <script src="/js/main/program_list_layout.js"></script>
-<script th:if="${param.refresh}" th:inline="javascript">
-    // window.location.href = window.location.pathname; // 현재 페이지 새로고침
-    //
-    // window.addEventListener("load", function () {
-    //     const urlParams = new URLSearchParams(window.location.search);
-    //     if (urlParams.get("refresh") === "true") {
-    //         window.location.href = "/program/list"; // 기본 리스트로 새로고침
-    //     }
-    // });
-</script>
+<!--<script th:if="${param.refresh}" th:inline="javascript">-->
+<!--    // window.location.href = window.location.pathname; // 현재 페이지 새로고침-->
+<!--    //-->
+<!--    // window.addEventListener("load", function () {-->
+<!--    //     const urlParams = new URLSearchParams(window.location.search);-->
+<!--    //     if (urlParams.get("refresh") === "true") {-->
+<!--    //         window.location.href = "/program/list"; // 기본 리스트로 새로고침-->
+<!--    //     }-->
+<!--    // });-->
+<!--</script>-->
 </html>
