--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
     <title>템프 | 새로운 커리어 경험</title>
     <link rel="stylesheet" href="/css/main/MainPage.css" />
     <link rel="stylesheet" href="/css/member/header.css">
+
     <link
             rel="shortcut icon"
             href="https://jumpit.saramin.co.kr/favicon.ico"
@@ -921,10 +922,72 @@
             </ul>
         </div>
         <!-- // 오른쪽 슬라이드 배너 끝 -->
+        <div id ="open-modal-button">
+            <button><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20" aria-hidden="true" class="bot"><g fill="#00DD6D" clip-path="url(#a)"><path fill-rule="evenodd" d="M10 3.334a.417.417 0 1 0 0 .833.417.417 0 0 0 0-.833Zm-2.083.416a2.083 2.083 0 1 1 4.166 0 2.083 2.083 0 0 1-4.166 0Z" clip-rule="evenodd"></path><path d="M7.5 13.542a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5ZM12.5 13.542a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Z"></path><path fill-rule="evenodd" d="M10 4.792c.46 0 .833.373.833.833v.625h4.584c.92 0 1.666.747 1.666 1.667v2.292h.417c.46 0 .833.373.833.833v2.5c0 .46-.373.833-.833.833h-.417v2.292c0 .92-.746 1.667-1.666 1.667H4.583c-.92 0-1.666-.747-1.666-1.667v-2.292H2.5a.833.833 0 0 1-.833-.833v-2.5c0-.46.373-.833.833-.833h.417V7.917c0-.92.746-1.667 1.666-1.667h4.584v-.625c0-.46.373-.833.833-.833ZM4.583 7.917v8.75h10.834v-8.75H4.583Z" clip-rule="evenodd"></path></g><defs><clipPath id="a"><path fill="#fff" d="M0 0h20v20H0z"></path></clipPath></defs></svg>문의하기</button>
+        </div>
+        <div id="inquiry-modal" style="display:none;">
+            <div class="modal-backdrop"></div>
+            <div class="modal-container">
+                <div class="modal-header">
+                    <h3>문의 상세정보</h3>
+                    <button type="button" class="close-btn">
+                        <img
+                                class="close-button"
+                                src="/images/admin/cross.png"
+                                alt="닫기"
+                        />
+                    </button>
+                </div>
+
+                <!-- 모달 본문 -->
+                <div class="modal-body" id="member-inquiry-content">
+                    <!-- 문의 기본 정보 -->
+
+                    <div class="normal-inquiry-info">
+                        <h4>INFO</h4>
+                        <table class="info-table">
+                            <tbody>
+
+                            <tr>
+                                <th>문의유형</th>
+                                <td id="inqiury-type">
+                                    <select id="inquiryType">
+                                        <option value="이용문의">이용문의</option>
+                                        <option value="계정문의">계정문의</option>
+                                        <option value="오류문의">오류문의</option>
+                                        <option value="기타">기타</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- 문의 상세 내용 -->
+                    <div class="normal-inquiry-detail">
+                        <h4>문의 상세내용</h4>
+                        <label for="normal-inquiry-content"></label>
+                        <textarea class="detail-content" id="normal-inquiry-content">
+
+                        </textarea>
+                    </div>
+                </div>
+
+                <!-- 모달 푸터 -->
+                <div class="modal-footer">
+                    <button type="button" class="cancel-btn close-button">취소</button>
+                    <button type="button" class="save-btn submit-button close-button">저장</button>
+                </div>
+            </div>
+
+
+        </div>
     </div>
 </main>
 <!-- // 메인 끝 -->
 </body>
 <script src="/js/main/MainPage.js"></script>
 <script src="/js/member/mypage-all.js"></script>
+<script th:inline="javascript">
+    var memberData = /*[[${session.member}]]*/ null;
+</script>
 </html>
