--- a/src/main/resources/templates/enterprise/headerfooteredited.html
+++ b/src/main/resources/templates/enterprise/headerfooteredited.html
@@ -9,7 +9,7 @@
     <link rel="icon"
         href="https://cdn.jumpit.co.kr/jumpit/favicon.png">
     <link rel="stylesheet"
-        href="/static/css/enterprise/mypage-headerfooter.css">
+        href="/css/enterprise/mypage-headerfooter.css">
 </head>
 
 <body>
@@ -236,8 +236,11 @@
                             </ul>
                         </nav>
                         <div class="utility">
-                            <div class="account"><button
-                                    class="link">로그인</button><button
+                            <div class="account">
+                                <button id="open-company-inquiry">
+                                    기업 문의
+                                </button>
+                                <button class="link">로그인</button><button
                                     class="btn_primary size_s">기업
                                     회원가입</button></div>
                         </div>
@@ -282,10 +285,67 @@
                     </li>
                 </ul>
             </div>
+            <div id="inquiry-modal" style="display:none;">
+                <div class="modal-backdrop"></div>
+                <div class="modal-container">
+                    <div class="modal-header">
+                        <h3>문의 상세정보</h3>
+                        <button type="button" class="close-btn">
+                            <img
+                                    class="close-button"
+                                    src="/images/admin/cross.png"
+                                    alt="닫기"
+                            />
+                        </button>
+                    </div>
+
+                    <!-- 모달 본문 -->
+                    <div class="modal-body" id="company-inquiry">
+                        <!-- 문의 기본 정보 -->
+
+                        <div class="company">
+                            <h4>INFO</h4>
+                            <table class="info-table">
+                                <tbody>
+
+                                <tr>
+                                    <th>문의유형</th>
+                                    <td id="inqiury-type">
+                                        <select id="inquiryType">
+                                            <option value="이용문의">이용문의</option>
+                                            <option value="계정문의">계정문의</option>
+                                            <option value="오류문의">오류문의</option>
+                                            <option value="기타">기타</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <!-- 문의 상세 내용 -->
+                        <div class="company-inquiry-detail">
+                            <h4>문의 상세내용</h4>
+                            <label for="company-inquiry-content"></label>
+                            <textarea class="detail-content" id="company-inquiry-content">
+
+                        </textarea>
+                        </div>
+                    </div>
+
+                    <!-- 모달 푸터 -->
+                    <div class="modal-footer">
+                        <button type="button" class="cancel-btn close-button">취소</button>
+                        <button type="button" class="save-btn submit-button close-button">저장</button>
+                    </div>
+                </div>
+
+
+            </div>
         </footer>
     </div>
     <div id="modal"></div>
 
 </body>
 
+<script src="/js/enterprise/header.js"></script>
 </html>
