기업 문의 발송 완료

--- a/src/main/resources/templates/enterprise/account-info.html
+++ b/src/main/resources/templates/enterprise/account-info.html
@@ -19,6 +19,8 @@
         href="/css/enterprise/mypage-info4.css">
     <link rel="stylesheet"
         href="/css/enterprise/accountinfo5.css">
+    <link rel="stylesheet"
+          href="/css/enterprise/mypage-headerfooter.css">
 </head>
 
 
