--- a/src/main/resources/templates/enterprise/headerfooteredited.html
+++ b/src/main/resources/templates/enterprise/headerfooteredited.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="root">
-        <div id="skipnavigation"><a href="/#content">본문 바로가기</a></div>
+        <div id="skipnavigation"><a href="/#content"></a></div>
         <div class="header_line_banner_wrap">
             <div class="header_line">
                 <header class="header">
@@ -348,4 +348,5 @@
 </body>
 
 <script src="/js/enterprise/header.js"></script>
+
 </html>
