--- a/src/main/resources/templates/member/account-info.html
+++ b/src/main/resources/templates/member/account-info.html
@@ -2,21 +2,12 @@
 
 <head>
     <meta charset="utf-8">
-
-    <!-- <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-instagram.svg">
-    <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-kakao.svg">
-    <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-youtube.svg">
-    <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-facebook.svg">
-    <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-google.svg">
-    <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-apple.svg"> -->
     <title>템프 | 계정 정보 설정</title>
     <link rel="icon" href="/images/member/favicon.ico" />
-    <meta name="next-size-adjust">
-    <style data-styled="active" data-styled-version="6.0.7">
-    </style>
     <link rel="stylesheet" type="text/css" href="/css/member/mypage-accountinfo1.css">
     <link rel="stylesheet" href="/css/member/mypage-accountinfo2.css">
     <link rel="stylesheet" href="/css/member/mypage-accountinfo3.css">
+    <link rel="stylesheet" href="/css/member/header.css">
 
     <style>
         @font-face {
@@ -31,6 +22,7 @@
 </head>
 
 <body class="__className_f53396" style="">
+<header th:replace="/main/header.html :: .header-sc"></header>
 
 <main class="main-sc0">
     <div>
@@ -46,20 +38,20 @@
                                     현황</a>
                             </li>
                             <li class="mypagemenu2">
-                                <a target="_self" href="/member/mypage-scraplist.html">스크랩
+                                <!--임시 태그-->
+                                <a target="_self" href="/resume/main">스크랩
                                     리스트</a>
                             </li>
                             <li class="mypagemenu2">
-                                <a target="_self" href="/member/mypage-payment.html">결제
+                                <a target="_self" href="/member/account-payment">결제
                                     관리</a>
                             </li>
                             <li class="mypagemenu2-1">
-                                <a target="_self" href="/member/mypage-accountinfo.html">계정
+                                <a target="_self" href="/mypage/account-info">계정
                                     정보 설정</a>
                             </li>
                             <li class="mypagemenu2">
-                                <a target="_self"
-                                   href="/member/mypage-accountwithdrawl.html">계정
+                                <a target="_self" href="/member/account-withdrawal">계정
                                     탈퇴</a>
                             </li>
                         </ul>
