--- a/src/main/resources/templates/resume/edit.html
+++ b/src/main/resources/templates/resume/edit.html
@@ -2,33 +2,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="preconnect" href="https://cdn.jumpit.co.kr" />
-    <link href="https://cdn.jumpit.co.kr" rel="dns-prefetch" />
-    <link rel="preconnect" href="https://www.googletagmanager.com" />
-    <link href="https://www.googletagmanager.com"
-        rel="dns-prefetch" />
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
-    <link rel="preload"
-        href="/-next/media/ff840cfebfb63b0c-s.p.woff2"
-        as="font" crossorigin="" type="font/woff2" />
-    <link rel="preload" as="image"
-        href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-instagram.svg" />
-    <link rel="preload" as="image"
-        href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-kakao.svg" />
-    <link rel="preload" as="image"
-        href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-youtube.svg" />
-    <link rel="preload" as="image"
-        href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-facebook.svg" />
-    <link rel="preload" as="image"
-        href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-google.svg" />
-    <link rel="preload" as="image"
-        href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-apple.svg" />
     <title>템프 | 이력서 수정</title>
     <link rel="stylesheet"
         href="/css/resume/resume-edit1.css" />
     <link rel="stylesheet"
         href="/css/resume/resume-edit2.css" />
+    <link rel="stylesheet" href="/css/member/header.css">
     <style>
         @font-face {
             font-family: Jumpit;
@@ -42,7 +21,7 @@
 </head>
 
 <body class="--className-f53396" style="overflow: auto">
-
+<header th:replace="/main/header.html :: .header-sc"></header>
     <div class="searchbox-top formedia"></div>
     <div class="searchbox-onclick formedia"></div>
     <main class="main-sc0">
@@ -2387,137 +2366,5 @@
     <div id="modal"></div>
 </body>
 <script src="/js/resume/resume-edit.js"></script>
-
+<script src="/js/member/mypage-all.js"></script>
 </html>
-<!-- 학력 바로 앞에 있던 내용 -->
-<!-- 혹시 필요하면 다시 삽입한 뒤 css 적용해야 됨. -->
-
-<!-- <div class="sc-f8444d35-9 kraFtm">
-                                        <div class="sc-92e2d4c9-0 jetckQ">
-                                            <div><label for="techStack" class="sc-f3793f50-0 fpvymz">기술스택(업무
-                                                    툴/스킬)</label>
-                                                <div class="sc-92e2d4c9-1 isLDFb"></div>
-                                                <div class="box-inp"><input autocomplete="off" id="techStack"
-                                                        placeholder="기술스택을 등록해주세요" class="jobcategory-inputarea"
-                                                        type="text" value="" name="techStack"></div>
-                                            </div>
-                                        </div>
-                                    </div> -->
-<!-- <div>
-                                        <div class="sc-37e5c3fd-1 bvMSfD">
-                                            <h1 class="sc-37e5c3fd-2 cxMYpc">링크</h1>
-                                            <div>
-                                                <div class="sc-4536c1ed-1 ewshRe"><img alt="github" height="40"
-                                                        loading="lazy"
-                                                        src="https://cdn.jumpit.co.kr/jumpit/personal/img-github.png"
-                                                        width="40">
-                                                    <div class="sc-4536c1ed-2 eHVvXG"><label for="github"
-                                                            class="sc-beab3720-0 lbwSup">Github</label><input
-                                                            autocomplete="off" id="github" maxlength="512"
-                                                            placeholder="https://github.com"
-                                                            class="jobcategory-inputarea" type="text" value=""
-                                                            name="github"></div><button
-                                                        class="sc-4536c1ed-3 dsqitP"><svg
-                                                            xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                            fill="none" viewBox="0 0 24 24">
-                                                            <path fill="#222" fill-rule="evenodd"
-                                                                d="M14.5 3a1 1 0 1 0 0 2h3.586l-4.793 4.793a1 1 0 0 0 1.414 1.414L19.5 6.414V10a1 1 0 1 0 2 0V5a2 2 0 0 0-2-2h-5Zm-9 3.5a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1V14a1 1 0 1 1 2 0v4.5a3 3 0 0 1-3 3h-11a3 3 0 0 1-3-3v-11a3 3 0 0 1 3-3H10a1 1 0 1 1 0 2H5.5Z"
-                                                                clip-rule="evenodd"></path>
-                                                        </svg><span class="blind">새창열기</span></button>
-                                                </div>
-                                                <div class="sc-4536c1ed-1 ewshRe"><img alt="notion" height="40"
-                                                        loading="lazy"
-                                                        src="https://cdn.jumpit.co.kr/jumpit/personal/img-notion.png"
-                                                        width="40">
-                                                    <div class="sc-4536c1ed-2 eHVvXG"><label for="notion"
-                                                            class="sc-beab3720-0 lbwSup">Notion</label><input
-                                                            autocomplete="off" id="notion" maxlength="512"
-                                                            placeholder="https://notion.so" class="jobcategory-inputarea"
-                                                            type="text" value="" name="notion"></div><button
-                                                        type="button" class="sc-4536c1ed-3 dsqitP"><svg
-                                                            xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                            fill="none" viewBox="0 0 24 24">
-                                                            <path fill="#222" fill-rule="evenodd"
-                                                                d="M14.5 3a1 1 0 1 0 0 2h3.586l-4.793 4.793a1 1 0 0 0 1.414 1.414L19.5 6.414V10a1 1 0 1 0 2 0V5a2 2 0 0 0-2-2h-5Zm-9 3.5a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1V14a1 1 0 1 1 2 0v4.5a3 3 0 0 1-3 3h-11a3 3 0 0 1-3-3v-11a3 3 0 0 1 3-3H10a1 1 0 1 1 0 2H5.5Z"
-                                                                clip-rule="evenodd"></path>
-                                                        </svg><span class="blind">새창열기</span></button>
-                                                </div>
-                                                <div class="sc-4536c1ed-1 ewshRe"><img alt="blog" height="40"
-                                                        loading="lazy"
-                                                        src="https://cdn.jumpit.co.kr/jumpit/personal/img-blog.png"
-                                                        width="40">
-                                                    <div class="sc-4536c1ed-2 eHVvXG"><label for="blog"
-                                                            class="sc-beab3720-0 lbwSup">Blog</label><input
-                                                            autocomplete="off" id="blog" maxlength="512"
-                                                            placeholder="https://blog.jumpit.co.kr"
-                                                            class="jobcategory-inputarea" type="text" value=""
-                                                            name="blog"></div><button type="button"
-                                                        class="sc-4536c1ed-3 dsqitP"><svg
-                                                            xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                            fill="none" viewBox="0 0 24 24">
-                                                            <path fill="#222" fill-rule="evenodd"
-                                                                d="M14.5 3a1 1 0 1 0 0 2h3.586l-4.793 4.793a1 1 0 0 0 1.414 1.414L19.5 6.414V10a1 1 0 1 0 2 0V5a2 2 0 0 0-2-2h-5Zm-9 3.5a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1V14a1 1 0 1 1 2 0v4.5a3 3 0 0 1-3 3h-11a3 3 0 0 1-3-3v-11a3 3 0 0 1 3-3H10a1 1 0 1 1 0 2H5.5Z"
-                                                                clip-rule="evenodd"></path>
-                                                        </svg><span class="blind">새창열기</span></button>
-                                                </div>
-                                                <div>
-                                                    <div class="sc-4536c1ed-1 ewshRe"><svg
-                                                            xmlns="http://www.w3.org/2000/svg" width="40" height="40"
-                                                            fill="none" viewBox="0 0 40 40">
-                                                            <path fill="#F5F5F8"
-                                                                d="M40 20C40 8.954 31.046 0 20 0S0 8.954 0 20s8.954 20 20 20 20-8.954 20-20Z">
-                                                            </path>
-                                                            <path fill="#222" fill-rule="evenodd"
-                                                                d="M13.83 20.232a3 3 0 1 0 3 5.196l3.68-2.125 1 1.732-3.68 2.125a5 5 0 0 1-5-8.66l3.68-2.125 1 1.732-3.68 2.125Zm12.094-.054a3 3 0 1 0-3-5.196l-3.68 2.125-1-1.732 3.68-2.125a5 5 0 0 1 5 8.66l-3.68 2.125-1-1.732 3.68-2.125Zm-8.146 2.393 5.197-3-1-1.732-5.197 3 1 1.732Z"
-                                                                clip-rule="evenodd"></path>
-                                                        </svg>
-                                                        <div class="sc-4536c1ed-2 eHVvXG">
-                                                            <div class="sc-4536c1ed-5 dXxVSP"><input maxlength="255"
-                                                                    placeholder="링크 제목을 입력해주세요" type="text"
-                                                                    name="links.0.title"></div><input maxlength="512"
-                                                                placeholder="http://, https://를 포함해 작성해주세요" type="text"
-                                                                name="links.0.url">
-                                                        </div><button type="button" class="sc-4536c1ed-3 dsqitP"><svg
-                                                                xmlns="http://www.w3.org/2000/svg" width="24"
-                                                                height="24" fill="none" viewBox="0 0 24 24">
-                                                                <path fill="#222" fill-rule="evenodd"
-                                                                    d="M14.5 3a1 1 0 1 0 0 2h3.586l-4.793 4.793a1 1 0 0 0 1.414 1.414L19.5 6.414V10a1 1 0 1 0 2 0V5a2 2 0 0 0-2-2h-5Zm-9 3.5a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1V14a1 1 0 1 1 2 0v4.5a3 3 0 0 1-3 3h-11a3 3 0 0 1-3-3v-11a3 3 0 0 1 3-3H10a1 1 0 1 1 0 2H5.5Z"
-                                                                    clip-rule="evenodd"></path>
-                                                            </svg><span class="blind">새창열기</span></button>
-                                                    </div>
-                                                </div>
-                                            </div><button type="button"><svg xmlns="http://www.w3.org/2000/svg"
-                                                    width="20" height="20" fill="none" viewBox="0 0 20 20">
-                                                    <path fill="#00DD6D" fill-rule="evenodd"
-                                                        d="M10 20c5.523 0 10-4.477 10-10S15.523 0 10 0 0 4.477 0 10s4.477 10 10 10ZM9 9V5.5h2V9h3.5v2H11v3.5H9V11H5.5V9H9Z"
-                                                        clip-rule="evenodd"></path>
-                                                </svg> 링크 추가</button>
-                                        </div>
-                                    </div> -->
-
-
-<!-- 경력사항 -> 회사 카테고리 -->
-<!-- <div class="companytext1 companytext4">
-                                        <div class="company-category">
-                                            <div>
-                                                <div class="company-category-selected">
-                                                    <div class="select-item">
-                                                        <img alt="AR" height="20" loading="lazy"
-                                                            src="https://cdn.jumpit.co.kr/images/stacks/noStack.png"
-                                                            width="20" /><span>AR</span><button
-                                                            class="btn-close" type="button">
-                                                            <span class="blind">닫기</span>
-                                                        </button>
-                                                    </div>
-                                                </div>
-                                                <div class="box-inp">
-                                                    <input autocomplete="off" id="careers-0-techStacks"
-                                                        placeholder="기술스택을 등록해주세요"
-                                                        class="jobcategory-inputarea" type="text"
-                                                        value="" name="careers-0-techStacks" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div> -->
-
-             
