--- a/src/main/resources/static/css/login/companyRegister.css
+++ b/src/main/resources/static/css/login/companyRegister.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Pretendard";
-  src: url(../static/fonts/main/PretendardVariable.woff2) format("woff");
+  src: url(/fonts/main/PretendardVariable.woff2) format("woff");
   font-weight: 100 900;
   font-style: normal;
 }
