--- a/src/main/resources/templates/enterprise/program-list.html
+++ b/src/main/resources/templates/enterprise/program-list.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="title">
                 <h2>포지션 리스트</h2>
-                <a href="/enterprise/program-edit">
+                <a href="/enterprise/program-insert-page">
                     <button class="register-btn">포지션 등록</button>
                 </a>
 
@@ -48,28 +48,25 @@
                 <div class="column" id="work">
                     <div class="card-text-wrapper">
                         <h3>진행중 </h3>
-                        <h3> 5</h3>
+                        <h3 id="work-count"> 5</h3>
                     </div>
-
-
                 </div>
                 <div class="column" id="wait">
                     <div class="card-text-wrapper">
                         <h3>승인 요청중</h3>
-                        <h3>5</h3>
+                        <h3 id="wait-count">5</h3>
                     </div>
-
                 </div>
                 <div class="column" id="write">
                     <div class="card-text-wrapper">
                         <h3>작성중</h3>
-                        <h3>5</h3>
+                        <h3 id="write-count">5</h3>
                     </div>
                 </div>
                 <div class="column" id="end">
                     <div class="card-text-wrapper">
                         <h3>마감</h3>
-                        <h3>5</h3>
+                        <h3 id="end-count">5</h3>
                     </div>
                 </div>
             </div>
