마이페이지 메인의 스크랩 목록에서 D-day 표기 수정 및 기타 수정사항들

--- a/src/main/resources/static/css/main/MainPage.css
+++ b/src/main/resources/static/css/main/MainPage.css
@@ -524,7 +524,13 @@ h3{
     text-overflow: ellipsis;
     display: -webkit-box;
 }
-
+.loginImageWrap{
+    display: flex;
+    justify-content: center;
+}
+.loginImageWrap img{
+    width : 90px;
+}
 .loginButton{
     margin-top: 28px;
     width: 100%;
