--- a/src/main/resources/templates/main/company-info.html
+++ b/src/main/resources/templates/main/company-info.html
@@ -792,6 +792,9 @@
     </div>
 </div>
 </body>
+<script th:inline="javascript">
+    const memberData = /*[[${session.member}]]*/ null;
+</script>
 <script src="/js/main/company-info.js"></script>
 <script src="/js/member/mypage-all.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
