--- a/src/main/resources/templates/member/account-withdrawl.html
+++ b/src/main/resources/templates/member/account-withdrawl.html
@@ -331,5 +331,7 @@
 </body>
 <script src="/js/member/mypage-all.js"></script>
 <script src="/js/member/mypage-accountwithdrawal.js"></script>
-
+<script th:inline="javascript">
+    const memberData = /*[[${session.member}]]*/ null;
+</script>
 </html>
