--- a/src/main/resources/static/css/member/mypage-main1.css
+++ b/src/main/resources/static/css/member/mypage-main1.css
@@ -452,7 +452,7 @@
 
 .main-content4>span:nth-child(1)>i::before {
     font-style: normal;
-    content: "🧐️️  ";
+    content: "🧐️️";
 }
 
 .main-content4>span:nth-child(2)::after {
@@ -651,6 +651,11 @@
     border-radius: 4px;
 }
 
+.main-content5-bottom-box:hover .counts {
+    opacity: 1;
+    display: flex;
+}
+
 .main-content5-bottom-box .img-box {
     width: 100%;
     height: 166px;
@@ -702,13 +707,24 @@
     color: rgb(255, 255, 255);
     font-size: 13px;
     line-height: 18px;
-    z-index: 1;
+    z-index: 2;
 }
 
 .main-content5-bottom-box .counts .position-view-count {
-    display: none;
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
 }
 
+
+.main-content5-bottom-box .counts .position-view-count svg{
+    position: relative;
+    top: -1px;
+}
+
+.main-content5-bottom-box .counts .position-view-count span{
+    margin-left: 4px;
+}
 .scrap-button {
     display: flex;
     justify-content: center;
