--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -141,7 +141,7 @@
 </body>
 
 <script src="/js/member/mypage-all.js"></script>
-<script>
-
+<script th:inline="javascript">
+    const memberData = /*[[${session.member}]]*/ null;
 </script>
 </html>
