--- a/src/main/resources/templates/member/account-payment.html
+++ b/src/main/resources/templates/member/account-payment.html
@@ -177,5 +177,7 @@
 <script src="/js/member/mypage-payment-event.js"></script>
 <script src="/js/member/mypage-all.js"></script>
 <script src="https://js.bootpay.co.kr/bootpay-5.0.2.min.js" type="application/javascript"></script>
-
+<script th:inline="javascript">
+    const memberData = /*[[${session.member}]]*/ null;
+</script>
 </html>
