--- a/src/main/resources/templates/member/account-scraplist.html
+++ b/src/main/resources/templates/member/account-scraplist.html
@@ -602,5 +602,7 @@
 
 </body>
 <script src="/js/member/mypage-all.js"></script>
-
+<script th:inline="javascript">
+    const memberData = /*[[${session.member}]]*/ null;
+</script>
 </html>
