--- a/src/main/resources/templates/resume/edit.html
+++ b/src/main/resources/templates/resume/edit.html
@@ -2367,4 +2367,7 @@
 </body>
 <script src="/js/resume/resume-edit.js"></script>
 <script src="/js/member/mypage-all.js"></script>
+<script th:inline="javascript">
+    const memberData = /*[[${session.member}]]*/ null;
+</script>
 </html>
