2025 03 25  C 만 구현됨 이미지 첨부

--- a/src/main/resources/templates/enterprise/company-image.html
+++ b/src/main/resources/templates/enterprise/company-image.html
@@ -125,6 +125,7 @@
                     <div class="buttons">
                         <!-- <button class="btn btn-primary">기업정보 등록</button>/ -->
                         <button class="btn btn-secondary">승인요청</button>
+                        <button class="btn btn-secondary">이미지 삭제</button>
                     </div>
                 </div>
             </form>
