--- a/src/main/resources/static/css/member/mypage-applied1.css
+++ b/src/main/resources/static/css/member/mypage-applied1.css
@@ -761,6 +761,29 @@
     z-index: 3;
 }
 
+.apply-pay-div{
+    position: absolute;
+    right: 50px;
+    top: 0px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    transform: translateY(-20%);
+    min-width: 40px;
+}
+
+.apply-pay-button{
+    text-decoration: underline;
+    margin-top: 10px;
+    font-weight: 400;
+    color: rgb(153, 153, 153);
+    cursor: pointer;
+    font-size: 13px;
+    line-height: 18px;
+    float: right;
+    width: 24px;
+}
 .apply-delete-div {
     position: absolute;
     right: 0px;
@@ -770,7 +793,7 @@
     flex-direction: column;
     align-items: end;
     transform: translateY(-20%);
-    min-width: 170px;
+    min-width: 40px;
 }
 
 .apply-delete-button {
