메인페이지 프로그램 썸네일 수정 중

--- a/src/main/resources/templates/enterprise/headerfooteredited.html
+++ b/src/main/resources/templates/enterprise/headerfooteredited.html
@@ -107,7 +107,7 @@
                                         </svg>
                                         
                                     </div>
-                                    <div class="link link2">이미지 등록<svg
+                                    <div class="link link2"><a href="/enterprise/company-image">이미지 등록</a><svg
                                             xmlns="http://www.w3.org/2000/svg"
                                             width="12" height="7"
                                             viewBox="0 0 12 7"
