--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -205,7 +205,7 @@
                         <a th:href="|/program/detail/${topList.id}|">
                             <div class="imgBox">
                                     <img
-                                            th:src="@{'/enterprise/display?path=' + ${thumbnail.filePath} + '/' + ${thumbnail.fileName}}"
+                                            th:src="@{'/enterprise/display?path=' + ${topList.filePath} + '/' + ${topList.fileName}}"
                                             class="img"
                                             id="program-id"
                                     />
