--- a/src/main/resources/templates/main/program-list.html
+++ b/src/main/resources/templates/main/program-list.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <!-- 헤더 시작 -->
-<header th:replace="/main/header.html :: .header-sc"></header>
+<header th:replace="~{main/header.html :: .header-sc}"></header>
 <!-- // 헤더 끝 -->
 <!-- 메인 시작 -->
 <main class="main">
