--- a/src/main/resources/templates/member/account-scraplist.html
+++ b/src/main/resources/templates/member/account-scraplist.html
@@ -23,7 +23,7 @@
 </head>
 
 <body class="__className_f53396" style="">
-<header th:replace="/main/header.html :: .header-sc"></header>
+<header th:replace="~{main/header.html :: .header-sc}"></header>
     <main class="main-sc0">
         <div>
             <div class="main-wrapper0">
