--- a/src/main/resources/templates/resume/edit.html
+++ b/src/main/resources/templates/resume/edit.html
@@ -21,7 +21,7 @@
 </head>
 
 <body class="--className-f53396" style="overflow: auto">
-<header th:replace="/main/header.html :: .header-sc"></header>
+<header th:replace="~{main/header.html :: .header-sc}"></header>
     <div class="searchbox-top formedia"></div>
     <div class="searchbox-onclick formedia"></div>
     <main class="main-sc0">
