--- a/src/main/resources/templates/member/account-main.html
+++ b/src/main/resources/templates/member/account-main.html
@@ -27,7 +27,7 @@
 </head>
 
 <body class="__className_f53396">
-<header th:replace="/main/header.html :: .header-sc"></header>
+<header th:replace="~{main/header.html :: .header-sc}"></header>
     <main class="main-sc0">
         <div>
             <div class="main-wrapper0">
