--- a/src/main/resources/templates/resume/main.html
+++ b/src/main/resources/templates/resume/main.html
@@ -20,7 +20,7 @@
 </head>
 
 <body class="__className_f53396">
-<header th:replace="/main/header.html :: .header-sc"></header>
+<header th:replace="~{main/header.html :: .header-sc}"></header>
     <div class="searchbox-top formedia"></div>
     <div class="searchbox-onclick formedia"></div>
     <main class="resume-main">
