--- a/src/main/resources/templates/resume/resume-edit.html
+++ b/src/main/resources/templates/resume/resume-edit.html
@@ -42,6 +42,7 @@
 </head>
 
 <body class="--className-f53396" style="overflow: auto">
+<header th:replace="~{main/header.html :: .header-sc}"></header>
     <header class="header-sc">
         <div class="div-sc1">
             <div class="div-sc2">
