--- a/src/main/resources/templates/resume/resume-main.html
+++ b/src/main/resources/templates/resume/resume-main.html
@@ -29,6 +29,7 @@
 </head>
 
 <body class="__className_f53396">
+<header th:replace="~{main/header.html :: .header-sc}"></header>
     <header class="header-sc">
         <div class="div-sc1">
             <div class="div-sc2">
