로그인 오류 및, ip 변경 완료

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -153,7 +153,7 @@
                             </li>
                             
                             <li class="loginButtonWrap">
-                                <a href="/member/login">
+                                <a href="member/login">
                                     <button class="loginButton">
                                         회원가입 / 로그인
                                     </button>
