메인 페이지 썸네일 수정 완료

--- a/src/main/resources/templates/enterprise/program-list.html
+++ b/src/main/resources/templates/enterprise/program-list.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 
-<header th:replace="/enterprise/headerfooteredited.html :: .header"></header>
+<header th:replace="~{enterprise/headerfooteredited.html :: .header}"></header>
 <body>
     <div id="root">
         <div id="skipnavigation"><a href="/#content">본문 바로가기</a></div>
