마이페이지 a태그 링크 수정 프로그램 목록에서의 썸네일 결제 버튼 결제되는 것은 화깅ㄴ

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -478,7 +478,7 @@
                                                                     >
                                                                     <a
                                                                             class="menu-btn notice-link"
-                                                                            href="/admin/home/notifications"
+                                                                            href="/admin/home/notices"
                                                                     >
                                                                         <span
                                                                         >바로가기</span
