--- a/src/main/resources/templates/member/account-main.html
+++ b/src/main/resources/templates/member/account-main.html
@@ -38,13 +38,8 @@
                         <div class="mypagemenu-wrapper">
                             <ul class="mypagemenu1">
                                 <li class="mypagemenu2">
-                                    <a target="_self" href="/mypage/account-applied">입사지원
+                                    <a target="_self" href="/member/account-applied">입사지원
                                         현황</a>
-                                </li>
-                                <li class="mypagemenu2">
-                                         <!--임시 태그-->
-                                    <a target="_self" href="/resume/main">스크랩
-                                        리스트</a>
                                 </li>
                                 <li class="mypagemenu2">
                                     <a target="_self" href="/member/account-payment">결제
@@ -68,7 +63,7 @@
                     </h1>
                     <ul class="topbox0">
                         <li class="topbox-content1">
-                            <a href="/mypage/account-applied">
+                            <a href="/member/account-applied">
                                 <dl>
                                     <dt>지원완료</dt>
                                     <dd>0</dd>
@@ -77,7 +72,7 @@
                         </li>
 
                         <li class="topbox-content1">
-                            <a href="/mypage/account-applied">
+                            <a href="/member/account-applied">
                                 <dl>
                                     <dt>최종합격</dt>
                                     <dd>0</dd>
@@ -85,7 +80,7 @@
                             </a>
                         </li>
                         <li class="topbox-content1">
-                            <a href="/mypage/account-applied">
+                            <a href="/member/account-applied">
                                 <dl>
                                     <dt>불합격</dt>
                                     <dd>0</dd>
