--- a/src/main/resources/templates/member/account-info.html
+++ b/src/main/resources/templates/member/account-info.html
@@ -34,14 +34,10 @@
                     <div class="mypagemenu-wrapper">
                         <ul class="mypagemenu1">
                             <li class="mypagemenu2">
-                                <a target="_self" href="/mypage/account-applied">입사지원
+                                <a target="_self" href="/member/account-applied">입사지원
                                     현황</a>
                             </li>
-                            <li class="mypagemenu2">
-                                <!--임시 태그-->
-                                <a target="_self" href="/resume/main">스크랩
-                                    리스트</a>
-                            </li>
+
                             <li class="mypagemenu2">
                                 <a target="_self" href="/member/account-payment">결제
                                     관리</a>
